feat: extend homepage settings and content types
